<resources>
    <!-- General -->
    <string name="app_name" translatable="false">RoarFit</string>
    <string name="account_type" translatable="false">fit.key.staging</string>

    <!-- Network Error -->
    <string name="networkerror_server_unreachable">Server unreachable</string>
    <string name="networkerror_username_pwd_wrong">Username or password is wrong</string>
    <string name="networkerror_unexpected">An unexpected error occurred</string>
    <string name="networkerror_jwt_expired">Please re-login</string>
    <string name="networkerror_timeout">Connection timeout</string>

    <!-- AuthActivity -->
    <string name="auth_hint_username" translatable="false">Username</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_login" translatable="false">Login</string>
    <string name="auth_logo_desc" translatable="false">RoarFit Logo</string>
    <string name="auth_fill_all_fields">Please fill in all fields</string>
    <string name="auth_endicon_desc" translatable="false">@string/auth_biometric_encrypt_title</string>
    <string name="auth_biometric_encrypt_title">Biometric Quick Login</string>
    <string name="auth_biometric_encrypt_desc">Activate biometric authentication to quickly login with your fingerprint the next time you open the app.</string>
    <string name="auth_biometric_encrypt_negative_button">Don\'t remind me again</string>
    <string name="auth_biometric_decrypt_title">Quick login</string>
    <string name="auth_biometric_decrypt_close">Close</string>

    <!-- MainActivity -->
    <string name="main_bottomnav_dashboard">Dashboard</string>
    <string name="main_bottomnav_statistics">Statistics</string>
    <string name="main_bottomnav_history">History</string>
    <string name="main_bottomnav_profile">Profile</string>
    <string name="main_appbar_logout" translatable="false">Logout</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_biometric_category" translatable="false">@string/auth_biometric_encrypt_title</string>
    <string name="settings_biometric_title" translatable="false">@string/auth_biometric_encrypt_title</string>
    <string name="settings_biometric_summary" translatable="false">@string/auth_biometric_encrypt_desc</string>

    <!-- Dashboard -->
    <string name="dashboard_workoutplan_header">Workoutplan</string>
    <string name="dashboard_empty_desc">No workoutplan has been assigned to you. Please contact your trainer.</string>
    <string name="dashboard_workoutplan_day">Day %d</string>
    <string name="dashboard_warmup_cooldown">Warmup: %1$smin \t Cooldown: %2$smin</string>

    <string name="itemexercise_completed">Completed</string>

    <!-- Bottom sheet -->
    <string name="main_bottomsheet_title">Choose equipment from</string>
    <string name="main_bottomsheet_qr" translatable="false">QR</string>
    <string name="main_bottomsheet_list">List</string>

    <!-- Camera -->
    <string name="camera_equipment">Equipment</string>
    <string name="camera_close_desc">Close</string>

    <!-- Equipment List -->
    <string name="equipmentlist_title">Choose equipment</string>

    <!-- Exercise List -->
    <string name="exerciselist_title">Choose exercise</string>
    <string name="exerciselist_header_exercises">Exercises</string>
    <string name="exerciselist_equipment">Equipment</string>

    <!-- Exercise Info -->
    <string name="exerciseinfo_button_start" translatable="false">Start</string>
    <string name="exerciseinfo_title">Exercise</string>
    <string name="exerciseinfo_header_exercise">Exercise</string>
    <string name="exerciseinfo_equipment">Equipment</string>
    <string name="exerciseinfo_no_equipment">No equipment needed</string>
    <string name="exerciseinfo_header_bodyparts">Body parts</string>
    <string name="exerciseinfo_header_trainerinfo">Personal Trainer specifications</string>
    <string name="exerciseinfo_sets">Sets: %d</string>
    <string name="exerciseinfo_reps">Reps: %d</string>
    <string name="exerciseinfo_weight">Weight: %.1f kg</string>

    <!-- Exercise -->
    <string name="exercise_time" translatable="false">00:00</string>
    <string name="exercise_header_trainerinfo">Trainer specifications</string>
    <string name="exercise_backpress_warning_title">Are you sure you want to stop the exercise?</string>
    <string name="exercise_backpress_warning_msg">The progress will NOT be saved.</string>
    <string name="exercise_reset_warning_title">Reset stopwatch?</string>
    <string name="exercise_reset_warning_yes">Yes</string>
    <string name="exercise_reset_warning_no">Cancel</string>

    <!-- Finish Exercise -->
    <string name="finishexercise_title">Finish Exercise</string>
    <string name="finishexercise_sets">Sets</string>
    <string name="finishexercise_reps">Reps</string>
    <string name="finishexercise_weight">Weight</string>
    <string name="finishexercise_time">Amount of time</string>
    <string name="finishexercise_desc">Update here the information about your completed exercise.</string>
    <string name="finishexercise_min_secs" translatable="false">00</string>
    <string name="finishexercise_time_divider" translatable="false">:</string>
    <string name="finishexercise_time_add_zero" translatable="false">0%d</string>
    <string name="finishexercise_inputs_invalid">At least one of the inputs is invalid</string>
    <string name="finishexercise_exercise_already_completed">The exercise has already been completed</string>
    <string name="finishexercise_exercise_bodyparts" translatable="false">\u0020- %s</string>
    <string name="finishexercise_exercise_helpertext_sets">*Trainer: %d sets</string>
    <string name="finishexercise_exercise_helpertext_reps">*Trainer: %d reps</string>
    <string name="finishexercise_exercise_helpertext_weight">*Trainer: %.1f kg</string>
    <string name="finishexercise_exercise_error">Invalid input</string>
    <string name="finishexercise_weight_input">%.1f</string>

    <!-- Exercise History -->
    <string name="history_exercise_info">%1$s - %2$d Sets - %3$d Reps </string>
    <string name="history_exercise_opt_weight">- %.1f kg</string>
    <string name="history_exercise_empty_desc">You haven\'t completed any exercises yet.</string>

    <!-- Notification -->
    <string name="exercise_notification_name">Exercise</string>

    <!-- Statistics -->
    <string name="statistics_tab_timespent">Time spent</string>
    <string name="statistics_tab_weightdev">Weight</string>
    <string name="statistics_timespent_week_divider">%1$s - %2$s</string>
    <string name="statististics_nodatatext">No exercises have been completed this week.</string>
    <string-array name="statistics_weekdays">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
