<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_bottomsheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="112dp"
        android:text="@string/main_bottomsheet_title"
        android:textColor="@color/darkGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bottomsheet_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:hoveredFocusedTranslationZ="0dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_bottomsheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="50dp"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_qrcode"
        app:tint="@color/darkGrey" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bottomsheet_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:hoveredFocusedTranslationZ="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_bottomsheet"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="50dp"
        app:pressedTranslationZ="0dp"
        app:srcCompat="@drawable/ic_view_list_black_24dp"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/text_bottomsheet_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_bottomsheet_qr"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_bottomsheet_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_bottomsheet_list"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_bottomsheet_qr"
        app:layout_constraintTop_toBottomOf="@+id/fab_bottomsheet_list" />

</androidx.constraintlayout.widget.ConstraintLayout>