<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_finishexercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_exercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryLight"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/finishexercise_title"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_finishexercise_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/finishexercise_desc"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout_exercise" />

    <TextView
        android:id="@+id/text_finishexercise_exercisename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_finishexercise_desc"
        tools:text="Leg extension" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_finishexercise_desc" />

    <ImageView
        android:id="@+id/icon_finishexercise_timer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:tint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout_finishexercise_setsreps"
        app:layout_constraintEnd_toStartOf="@+id/linearlayout_finishexercise_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_finishexercise_equip_bodyparts"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/ic_timer_black_24dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearlayout_finishexercise_time"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout_finishexercise_setsreps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_finishexercise_equip_bodyparts">

        <EditText
            android:id="@+id/input_finishexercise_min"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:hint="@string/finishexercise_min_secs"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/finishexercise_min_secs"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/text_finishexercise_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishexercise_time_divider"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/input_finishexercise_secs"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:hint="@string/finishexercise_min_secs"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/finishexercise_min_secs"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_finishexercise_setsreps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_finishexercise_time">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_finishexercise_sets"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/finishexercise_sets"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_finishexercise_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_finishexercise_reps"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/finishexercise_reps"
            app:errorEnabled="true"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_finishexercise_reps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorlayout_finishexercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_finishexercise_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/primaryLight"
            app:srcCompat="@drawable/ic_done_black_24dp"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_finishexercise"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="378dp"
        android:elevation="2dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.core.widget.ContentLoadingProgressBar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_finishexercise_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:hint="@string/finishexercise_weight"
        android:minWidth="200dp"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_finishexercise_setsreps">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_finishexercise_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearlayout_finishexercise_equip_bodyparts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_finishexercise_exercisename">

        <TextView
            android:id="@+id/text_finishexercise_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            tools:text="Beinstrecker -" />

        <TextView
            android:id="@+id/text_finishexercise_bodyparts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            tools:text=" Legs" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>